# injaaz-form-system

./: .dockerignore  .gitignore  Dockerfile  Injaaz.py  __init__.py  bject -Unique  Set-Content .gitignore  cloudinary_utils.py  config.py  docker-compose.override.yml  docker-compose.yml  docler-compose.yml  dump.rdb  env.example  metadata.json  photos.json  pyproject.toml  requirements.txt  run.py  tasks.py  worker.py  wsgi.py
.github/workflows/: enqueue-test-job.yml  run-rq-worker.yml
github/workflows/: enqueue-test-job.yml  run-rq-worker.yml
module_site_civil/: routes.py  site_civil_excel.py  site_civil_pdf.py
module_site_civil/templates/: civil_form.html  civil_success.html
module_site_visit/: __init__.py  routes.py  s3_utils_config.py  utils.py
module_site_visit/templates/: site_visit_form.html
module_site_visit/utils/: cloudinary_version.py  cloudinary_version.py.bak  email_sender.py  excel_writer.py  pdf_generator.py  state.py  tasks.py
scripts/: enqueue_test_job.py
static/: main.js  main.js.bak
templates/: dashboard.html
tools/: update_cloudinary_refs.py
utils/: cloudinary.py
